argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    gethomepage.dev/description: ArgoCD
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Operation
    gethomepage.dev/icon: argo-cd.png
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/href: https://argocd.tahr-toad.ts.net
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
