argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: argocd-server
          kind: Service
          namespace: argocd
          port: http
  tls:
    secretName: argocd-tls
